fix change my password vertical alignment

--- a/theme/sass/_styles.scss
+++ b/theme/sass/_styles.scss
@@ -1023,4 +1023,4 @@ td.EmptyDataPie {
 }
 
 .ux-collapsible.collapsed .ux-content { display: none; }
-.ux-collapsible.box { margin: -10px; }
+.ux-collapsible.box { margin: -11px -10px 10px -10px; }
